# ffmpeg_mediaFramework

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindFFmpeg.cmake  MediaFrameworkConfig.cmake
include/: media_framework.h
include/core/: media_context.h  media_frame.h  media_packet.h  media_types.h
include/input/: media_capture.h  media_reader.h
include/output/: media_streaming.h  media_writer.h
include/processing/: media_advanced.h  media_filter.h  media_processor.h
include/utils/: media_utils.h
src/core/: media_context.c  media_frame.c  media_packet.c  media_types.c
src/input/: media_capture.c  media_reader.c
src/output/: media_streaming.c  media_writer.c
src/processing/: media_advanced.c  media_filter.c  media_processor.c
src/utils/: media_utils.c
tests/: test_processor.c  test_reader.c  test_types.c
tools/: media_tool.c
